# CuteCalibrator

./: .gitignore  CMakeLists.txt  CuteCalibtator.pro  README.md  build.sh  calibrator.cpp  calibrator.hh  calibratorbuilder.cpp  calibratorbuilder.hh  lang.cpp  lang.hh  main.cpp  main_common.cpp  run_in_all.sh
calibrator/: Evdev.cpp  Evdev.hpp  EvdevTester.cpp  EvdevTester.hpp  Tester.cpp  Tester.hpp  Usbtouchscreen.cpp  Usbtouchscreen.hpp  XorgPrint.cpp  XorgPrint.hpp
gui/: calibration.cpp  calibration.hpp  gtkmm.cpp  gtkmm.hpp  gui_common.cpp  gui_common.hpp  inotifyfs.cpp  inotifyfs.h  testmode.cpp  testmode.hpp  touchempty.cpp  touchempty.hpp  touchfull.cpp  touchfull.hpp  touchid.cpp  touchid.hpp
pic/: lang.json  options.json
rapidjson/: reader.h
script/: calibration.sh  calibration_apply.sh  get_touch.sh
